src/App.css
/* ... */
.burger-nav a:hover {
  color: #f55742;
  transform: scale(1);
}

/*---Burger Animation---*/

.burger-toggle:checked~.burger-icon span:first-child {
  transform: rotate(45deg) translate(5px, 13px);
}

.burger-toggle:checked~.burger-icon span:nth-child(2) {
  opacity: 0;
}

.burger-toggle:checked~.burger-icon span:last-child {
  transform: rotate(-45deg) translate(1px, -9px);
}

@media (max-width: 699px) {
  .nav-menu {
    display: none;
    height: 100vh;
    border: 1px solid black;
  }

  .burger-menu {
    display: flex;
  }
}


/*---Header Component---*/

header {
  width: 100vw;
  padding: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav {
  display: flex;
  gap: 20px;
}

.main-logo {
  font-size: 1.5rem;
  background-color: #f55742;
  color: white;
  padding: 5px 15px;
  border-radius: 40px;
  box-shadow: -5px 8px 2px 1px rgba(31, 31, 252, 0.219);
  font-family: "Fugaz One", cursive;
}

/*---Home Component---*/

.hero {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 60px;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  height: calc(100vh - 114px);
}

.hero>p {
  width: 70%;
  line-height: 1.7;
  font-size: 1rem;
  font-weight: 500;
}

/*  ---Fridge Page--- */

.fridge {
  width: 100%;
  height: calc(100vh - 93px);
  /* Subtract the header height */
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  position: relative;
  overflow-y: hidden;
}

/* Fridge list/items */

.submit-wrapper {
  width: 90%;
  max-width: 500px;
  height: calc(96vh - 200px);
  min-height: 500px;
  margin: auto;
  position: relative;
  display: flex;
  justify-content: center;
}

.form-wrap{
  height: calc(100vh - 100px);
  width: 100%;
  position: absolute;
}

.fridge-card {
  width: 100%;
  max-width: 500px;
  height: calc(96vh - 200px);
  min-height: 500px;
  position: relative;
  overflow-y: auto;
  overflow-x: hidden;
  border: 1px solid rgb(187, 187, 187);
  box-shadow: -5px 8px 2px 1px rgba(31, 31, 252, 0.219);
  border-radius: 10px;
  align-items: center;
}

.fridge-card__title {
  padding: 15px;
  position: sticky;
  top: 0;
  text-align: center;
}

.fridge-list {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 100px;
}

.fridge__items {
  width: 90%;
  max-width: 551px;
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px 15px;
}

/* Fridge form, buttons & input */

.fridge__form {
  width: 100%;
  display: flex;
  justify-content: center;
  position: absolute;
  bottom: 0;
}

.fridge__controls {
  width: 100%;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.fridge-card-controls {
  position: absolute;
  bottom: 0px;
  width: 91%;
  height: 100px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  border-top: 1px solid rgb(187, 187, 187);
}

.fridge__input {
  width: 100%;
  height: 50px;
  font-size: 1.3rem;
  padding: 5px;
  background-color: white;
  outline: none;
}

.fridge__button--delete {
  width: 25px;
  height: 25px;
  border-radius: 20%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.fridge__button--add{
  width: 63px;
  height: 63px;
  border-radius: 100%;
  position: absolute;
  bottom: 60px;
  right: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;

}

.fridge__button-img{
  width: 25px;
}

.delete-icon {
  width: 20px;
}

/* Recipe card */

/* ! FIX CARD OVERFLOWING BUG */

.recipe-content {
  padding: 5px 20px 20px 20px;
  text-align: left;
  line-height: 1.5;
  font-size: 0.9rem;
  font-weight: 400;
}

/*--Content Loader Component---*/

.error-card,
.loading-card {
  padding: 20px;
  width: 100%;
  height: calc(100vh - 94px);
  display: flex;
  align-items: center;
}

.error-text,
.loading-text {
  width: 100%;
  max-width: 500px;
  height: calc(96vh - 200px);
  /* height: 80vh; */
  min-height: 500px;
  overflow-y: auto;
  overflow-x: hidden;
  border: 1px solid rgb(187, 187, 187);
  box-shadow: -5px 8px 2px 1px rgba(31, 31, 252, 0.219);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 20px;
}

.error-text>img,
.loading-text>img {
  width: 60%;
}

.load-row {
  width: 100px;
  height: 50px;
  line-height: 50px;
  text-align: center;
}

/* Loader style & animation */

.load-row span {
  display: inline-block;
  margin: 0px 2px;
  width: 10px;
  height: 10px;
  background: #f76002;
  border-radius: 50px;
  animation: up-down6 0.5s ease-in infinite alternate;
}

.load-row span:nth-child(2) {
  background: #e85b04c4;
  animation-delay: 0.16s;
}

.load-row span:nth-child(3) {
  background: #e85b0491;
  animation-delay: 0.32s;
}

.load-row span:nth-child(4) {
  background: #e85b0456;
  animation-delay: 0.48s;
}

@keyframes up-down6 {
  0% {
    transform: translateY(-10px);
  }

  100% {
    transform: translateY(10px);
  }
}

/*---Search page---*/

.search{
  border: 1px solid magenta;
  width: 100%;
  display: flex;
  justify-content: center;
}

.search-wrapper {
  display: flex;
  height: calc(100vh - 93px);
  justify-content: center;
  border: 1px solid magenta
}


.search-form {
  border: 1px solid orange;
  position: relative;
  width: 90%;
  height: fit-content;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.search-form__button{
  position: absolute;
  right: 6px;;
}

.search-form__input {
  border-radius: 10px;
  border: 1px solid rgb(168, 168, 168);
  padding: 0 10px;
  font-size: 1rem;
  height: 40px;
  width: 100%;
}

.recipe-card {
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin: 10px;
  padding: 15px;
  border: 1px solid rgb(187, 187, 187);
  box-shadow: -5px 8px 2px 1px rgba(31, 31, 252, 0.219);
  border-radius: 10px;
}
/* ... */

